apep_0119/v2/REPLICATION.md
# Replication Package: apep_0130

This folder contains all code and data needed to replicate the analysis.

## Requirements

- Python 3.10+
- Required packages: See below (or `requirements.txt` if present)

```bash
pip install pandas numpy statsmodels matplotlib
```

## Data

Data is fetched from the Census PUMS API (no API key required for basic queries).

**Cached data files:**
- `census_divisions.rds`
- `com_consumption_raw.rds`
- `com_prices_raw.rds`
- `cs_att_calendar.rds`
- `cs_att_dynamic.rds`
- `cs_att_group.rds`
- `cs_att_simple.rds`
- `cs_early_att.rds`
- `cs_early_result.rds`
- `cs_late_att.rds`
- `cs_late_result.rds`
- `cs_nyt_att.rds`
- `cs_nyt_dynamic.rds`
- `cs_nyt_result.rds`
- `cs_placebo_ind_att.rds`
- `cs_placebo_industrial.rds`
- `cs_price_att.rds`
- `cs_price_dynamic.rds`
- `cs_price_result.rds`
- `cs_result_main.rds`
- `cs_total_att.rds`
- `cs_total_dynamic.rds`
- `cs_total_result.rds`
- `eers_treatment.rds`
- `ind_consumption_raw.rds`
- `panel_clean.rds`
- `panel_full.rds`
- `policy_controls.rds`
- `population_raw.rds`
- `res_consumption_raw.rds`
- `res_prices_raw.rds`
- `robustness_summary.rds`
- `sa_result.rds`
- `state_fips.rds`
- `total_consumption_raw.rds`
- `twfe_main.rds`
- `twfe_policy_controls.rds`
- `twfe_region_year.rds`

## Code

**Scripts (run in order):**
- `00_packages.R`
- `01_fetch_data.R`
- `01b_fetch_weather.R`
- `01c_fetch_policy.R`
- `02_clean_data.R`
- `03_main_analysis.R`
- `04_robustness.R`
- `05_figures.R`
- `06_tables.R`

## Replication Instructions

1. Install requirements:
   ```bash
   pip install pandas numpy statsmodels matplotlib
   # For R scripts: install.packages(c("did", "fixest", "ggplot2"))
   ```

2. Run the analysis scripts in order:
   ```bash
   cd code/
   # For Python scripts:
   python 01_fetch_data.py    # Downloads data
   python 02_analysis.py      # Runs main analysis
   python 03_figures.py       # Generates figures
   
   # For R scripts:
   Rscript 01_fetch_data.R
   Rscript 02_analysis.R
   Rscript 03_figures.R
   ```

3. Scripts are numbered in execution order (01_, 02_, etc.).

## Data Source

Census PUMS (Public Use Microdata Sample)
- API: https://api.census.gov/data/{YEAR}/acs/acs1/pums
- Documentation: https://www.census.gov/programs-surveys/acs/microdata.html
- No API key required for basic queries

## Notes

- Scripts may contain hardcoded paths that need adjustment
- Cached JSON files allow replication without re-downloading
- For full replication from scratch, delete JSON files and re-run fetch scripts

---
Generated by APEP publish_paper.py
